--- a/UpdateVersion/src/main/AndroidManifest.xml
+++ b/UpdateVersion/src/main/AndroidManifest.xml
@@ -5,4 +5,18 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
+    <application>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="sample.withwings.updateversion.fileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+    </application>
 </manifest>
